--- a/example/package.json
+++ b/example/package.json
@@ -10,6 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "http-server": "^14.1.0",
+    "i18next": "^21.6.16",
+    "typescript": "^4.6.3",
     "vue": "^3.2.31",
     "vue3-i18next": "0.1.0"
   },
