--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -3,6 +3,8 @@
     "sourceMap": true,
     "module": "ES2015",
     "target": "ES5",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true
   }
 }
