--- a/vue3-i18next/package.json
+++ b/vue3-i18next/package.json
@@ -1,8 +1,8 @@
 {
   "name": "vue3-i18next",
   "version": "0.1.0",
-  "main": "lib/src/index.js",
-  "typings": "lib/src/index.d.ts",
+  "main": "lib/index.js",
+  "typings": "lib/index.d.ts",
   "scripts": {
     "build": "tsc -p ./"
   },
@@ -10,11 +10,10 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/types": "^7.17.0",
-    "typescript": "^4.6.3",
-    "vue": "^3.2.33"
+    "typescript": "^4.6.3"
   },
   "peerDependencies": {
-    "vue": "^3.2.33"
+    "vue": ">=3.2.0"
   },
   "dependencies": {
     "i18next": "^21.6.16"
