--- a/vue3-i18next/package.json
+++ b/vue3-i18next/package.json
@@ -13,9 +13,7 @@
     "typescript": "^4.6.3"
   },
   "peerDependencies": {
-    "vue": ">=3.2.0"
-  },
-  "dependencies": {
-    "i18next": "^21.6.16"
+    "vue": ">=3.2.0",
+    "i18next": ">21.0.0"
   }
 }
